# internet_magazin

./: category.json  pyproject.toml
catalog/: models.py  urls.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py
config/: settings.py
managment/commands/: fill.py
