[tool.poetry]
name = "internet_magazin"
version = "0.1.0"
description = ""
authors = ["Tatiyana Galitskaya <tatianagalitskaya3@gmail>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
